# murmur-miner

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
app/: main.py  remove_silence.py  speech_to_text.py  summary.py  utils.py
