[tool.poetry]
name = "murmurminer"
version = "0.1.0"
description = ""
authors = ["naoto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
torchaudio = "2.5.1"
silero-vad = "5.1.2"
soundfile = "0.12.1"
transformers = "4.46.2"
accelerate = "1.1.1"
numpy = "1.26.4"
openai-whisper = "20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
