[project]
name = "murmurminer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "silero-vad==5.1.2",
    "soundfile==0.12.1",
    "transformers==4.46.2",
    "accelerate==1.1.1",
    "numpy==1.26.4",
    "openai-whisper==20240930",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]
